wp-content/themes/vantage/partystart.css
/* ... */
#wp-admin-bar-updates {
    display: none;
}

.panel-profile-header .img-profile-data h1 {
    font-size: 300% !important;
    margin-bottom: 40px !important;
    margin-left: 35px !important;
}

/*
.rating-top {
	margin-left: 210px;
	margin-top: -40px;
	margin-bottom: 40px;
	color:white;
	font-size: 0!important;
}
*/
.rating-top img {
    width: 20px !important;
    height: 20px !important;
}

.rating-top .unconfirmed {
    display: none;
}

.media-beskrivelse-wrap {
    margin: 20px 0px 40px 238px;
    position: relative;
    float: left;
    text-align: center;
}

.media-beskrivelse-wrap a {
    font-size: 400%;
    margin-right: 10%;
    text-decoration: none;
}

.media-beskrivelse-wrap .fa-youtube {
    color: red;
}

.media-beskrivelse-wrap .fa-spotify {
    color: #81b71a;
}

.media-beskrivelse-wrap .fa-soundcloud {
    color: #ff7700;
}

.media-beskrivelse-wrap .fa-apple {
    color: #000;
}

/*Profiltekst til uppercase*/
.bp-user {
    /*text-transform: uppercase;*/
}

.ikonSorteringBokser {
    margin-right: 3px

}

/*skjule rating over profilene på memberloopen*/
#buddypress ul.item-list li div.action {
    display: none;
}

/*Skjule galleriet for å enkelt kunne ta i bruke dette igjen senere*/
#media-personal-li, #bpci-polaroid-upload-avatar {
    display: none;
}

ul.job_listings li.job_listing a {
    padding: 1em 1em 1em 0px;
}

.job_filters {
    background: none !important;
}

.search_jobs {
    padding: 1em 1em 1em 22px !important;
}

.job_filters .showing_jobs {
    border-top: 0 !important;
}

.job_listing_preview {
    border: none !important;
}

.entry-content .job_listing_preview_title, .job_listing_preview_title {
    background: none !important;
    text-align: center;
}

.entry-content .job_listing_preview_title h2, .job_listing_preview_title h2 {
    font-size: 200%;
    padding-bottom: 10px;
    background: #fff;
    padding-top: 10px;
}

.single_job_listing .meta {
    background: #fff;
    padding-bottom: 10px;
    padding-top: 10px;
}

.job_listing_preview h1 {
    background: rgb(255, 255, 255) none repeat scroll 0% 0%;
    padding-bottom: 10px;
    padding-top: 10px;
}

/*Fjerner posted on by over coverbildet*/
.bp_members .entry-header .entry-meta, #rtmedia-nav-item-all, .rtm-gallery-title, #-personal-li {
    display: none !important;;
}

.job_listing_preview {
    text-align: center;
    background: rgba(255, 255, 255, 0.9) none repeat scroll 0% 0%;
}

#mceu_21-0 {
    display: none;
}

#main {
    margin: 0 !important;
    padding: 0 !important;
}

#scrolleMedlemmerForsiden {
    position: relative;
    height: 220px;
    width: 100%;
    overflow-x: auto;
    overflow-y: hidden;
    margin-left: 0;
    padding-left: 0;
    background: white none repeat scroll 0% 0%;
    padding-top: 10px;
    padding-bottom: 10px;
}

#forsideMedlemmerTittel {
    width: 100%;
    text-align: center;
    padding: 5px;
    font-size: 130%;
}

#forsideMedlemmerTittel h3 {
    /*background: white;*/
    /*	padding-bottom:10px;
        padding-top:10px
        color:#2F3033 none repeat scroll 0% 0%;*/
    color: black;
}

#pgc-2-3-0 ul#members-list {
    width: 2100px;
    margin: 0px 0px 0px 0px !important;;
}

#pgc-2-3-0 #members-list li {
    margin-left: 7px;
    width: 200px;
    height: 200px;
    float: left;
    position: relative;
    list-style: none;
    overflow: hidden;
}

#buddypress ul.item-list li {
    padding: none !important;
}

#buddypress ul.item-list li div.item-title span {
    color: #fff!important;
}
.member-filter{
    -moz-border-radius-topleft: 5px;
    /* -webkit-border-top-left-radius: 5px; */
    /* border-top-left-radius: 5px; */
    -moz-border-radius-topright: 5px;
    /* -webkit-border-top-right-radius: 5px; */
    /* border-top-right-radius: 5px; */
    /* background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, rgba(0,0,0,0)), color-stop(100%, rgba(0,0,0,0.6))); */
    background-image: -webkit-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.6));
    background-image: -moz-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.6));
    background-image: -o-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.6));
    background-image: -ms-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.6));
    /* background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.6)); */
    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#00000000', endColorstr='#99000000');
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    -webkit-transition: all 300ms;
    -moz-transition: all 300ms;
    transition: all 300ms;
}
#buddypress #members-list li:hover .member-filter{
    background-image: -webkit-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,1));
    background-image: -moz-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,1));
    background-image: -o-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,1));
    background-image: -ms-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,1));
    /* background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.6)); */
    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#00000000', endColorstr='#99000000');
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    z-index:99;
    -webkit-transition: all 300ms;
    -moz-transition: all 300ms;
    transition: all 300ms;
}
#members-list li .musikertype {
z-index:100!important;
    width: 40px;
    position: absolute;
    /* background: #303030 none repeat scroll 0% 0%; */
    color: #FFF;
    padding-top: 5px;
    z-index: 10;
    float: left;
    bottom: 0px;
    padding-bottom: 5px;
    height: 50px;
    width: 50px;
    border-radius: 50%;
    padding-top: 13px;
    border: 2px solid white;
    top: -120px;
    left: 89px;
}

#members-list li .item-avatar img {
    width: 100%;
    height: 100%;
}

/*
#pgc-2-3-0 #members-list li .item .item-title {
    text-align: center;
    width: 100%;
}
/* ... */

